test/sema/typeck/lambda/body-wrong-type.out
error: `return` expects value of type `Int32` but got `Bool`.
--> body-wrong-type.dora:2:24
 | fn f(): (Int32): Int32 {
 |     |_x: Int32|: Int32 { false }
                          ~~~~~~~~~
 | }
 | 
1 error found.
