test/sema/typeck/lambda/body-wrong-type.dora
fn f(): (Int32): Int32 {
    |_x: Int32|: Int32 { false }
}
